chore: fix host ilc-demo-apps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -307,7 +307,7 @@ jobs:
               run: |
                   docker rm -f ilc-demo-apps || true
                   docker pull namecheap/ilc-demo-apps
-                  docker run -d --name ilc-demo-apps --add-host=host.docker.internal:host-gateway \
+                  docker run -d --name ilc-demo-apps \
                     --network container:ilc \
                     -e PUBLIC_HOST=${{ env.ILC_HOST || '127.0.0.1' }} \
                     namecheap/ilc-demo-apps
