--- a/e2e/Dockerfile
+++ b/e2e/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:20.8.0-alpine
+FROM codeceptjs/codeceptjs
 
 WORKDIR /e2e
 
@@ -6,7 +6,5 @@ COPY package-lock.json package.json ./
 RUN npm ci --no-package-lock --ignore-scripts
 
 COPY . ./
-
-ENV NODE_ENV=production
 
 CMD ["npm", "run", "start:verbose"]
