--- a/e2e/Dockerfile
+++ b/e2e/Dockerfile
@@ -1,4 +1,4 @@
-FROM codeceptjs/codeceptjs
+FROM ghcr.io/puppeteer/puppeteer:23.4.1
 
 WORKDIR /e2e
 
@@ -6,5 +6,8 @@ COPY package-lock.json package.json ./
 RUN npm ci --no-package-lock --ignore-scripts
 
 COPY . ./
+
+RUN mkdir -p /e2e/.codecept_output && \
+    chown -R pptruser:pptruser /e2e/.codecept_output
 
 CMD ["npm", "run", "start:verbose"]
