--- a/ilc/package.json
+++ b/ilc/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@namecheap/error-extender": "^2.2.1",
         "@namecheap/tailorx": "^8.2.1",
+        "@nc_ui/ilc-plugin-reporting-spaceship": "^1.7.0",
         "@newrelic/native-metrics": "^11.0.0",
         "agentkeepalive": "^4.5.0",
         "axios": "^1.8.2",
@@ -94,7 +95,7 @@
         "ts-loader": "^9.5.1",
         "ts-node": "^10.9.2",
         "typescript": "^5.6.2",
-        "webpack": "^5.94.0",
+        "webpack": "^5.99.8",
         "webpack-cli": "^5.1.4",
         "webpack-dev-middleware": "^7.4.2"
     },
