--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
         "concurrently": "^9.0.1",
         "husky": "^9.1.7",
         "prettier": "^3.3.3"
+    },
+    "dependencies": {
+        "webpack": "^5.99.8"
     }
 }
