--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -298,7 +298,7 @@ jobs:
     coverage_report:
         name: PR Coverage Report
         runs-on: ubuntu-latest
-        needs: [build_ilc, registry_tests]
+        needs: [build_ilc, build_registry, registry_tests]
         if: github.base_ref
         steps:
             - uses: actions/checkout@v4
