--- a/ilc/package.json
+++ b/ilc/package.json
@@ -41,6 +41,7 @@
         "js-cookie": "^2.2.1",
         "lodash": "^4.17.21",
         "lzutf8": "^0.6.3",
+        "exponential-backoff": "^3.1.1",
         "newrelic": "^12.5.1",
         "node-html-parser": "^6.1.13",
         "parseurl": "^1.3.3",
