--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "devDependencies": {
         "@commitlint/cli": "^19.6.1",
         "@commitlint/config-conventional": "^19.6.0",
+        "@types/safe-json-stringify": "^1.1.5",
+        "@types/uuid": "^10.0.0",
         "concurrently": "^9.0.1",
         "husky": "^9.1.7",
         "prettier": "^3.3.3"
