fix: fix ts packages

--- a/ilc/package.json
+++ b/ilc/package.json
@@ -65,8 +65,10 @@
         "@types/config": "^3.3.5",
         "@types/mocha": "^10.0.8",
         "@types/newrelic": "^9.14.4",
+        "@types/safe-json-stringify": "^1.1.5",
         "@types/sinon": "^17.0.3",
         "@types/supertest": "^6.0.3",
+        "@types/uuid": "^10.0.0",
         "babel-loader": "^9.2.1",
         "babel-plugin-istanbul": "^6.1.1",
         "babel-plugin-transform-async-to-promises": "^0.8.18",
