test(registry/server): increase coverage, bump nock

--- a/registry/package.json
+++ b/registry/package.json
@@ -16,9 +16,9 @@
         "migrate:rollback": "dotenv -- knex --knexfile config/knexfile.ts migrate:rollback",
         "seed": "dotenv -- knex --knexfile config/knexfile.ts seed:run",
         "seed:make": "knex --knexfile config/knexfile.ts seed:make -x ts",
-        "test": "cross-env-shell DB_CLIENT=sqlite3 npm run reset && cross-env NODE_ENV=test NODE_CONFIG_ENV=sqlite-test mocha",
+        "test:sqlite": "cross-env-shell DB_CLIENT=sqlite3 npm run reset && cross-env NODE_ENV=test NODE_CONFIG_ENV=sqlite-test mocha",
         "test:mysql": "cross-env-shell NODE_ENV=test NODE_CONFIG_ENV=mysql-test DB_CLIENT=mysql \"npm run reset && mocha\" ",
-        "test:postgres": "cross-env-shell NODE_ENV=test NODE_CONFIG_ENV=postgres-test DB_CLIENT=pg \"npm run reset && mocha\" ",
+        "test": "cross-env-shell NODE_ENV=test NODE_CONFIG_ENV=postgres-test DB_CLIENT=pg \"npm run reset && nyc mocha\" ",
         "test:ci": "npm run migrate && cross-env NODE_ENV=test dotenv -- nyc mocha --forbid-only",
         "reset": "dotenv bash ./scripts/reset.sh && npm run migrate",
         "assetsdiscovery": "cross-env NODE_ENV=production INTERVAL=2000 node -r source-map-support/register ./build/server/runnerAssetsDiscovery.js",
@@ -55,7 +55,7 @@
         "cross-env": "7.0.3",
         "jsonwebtoken": "^9.0.2",
         "mocha": "^10.7.3",
-        "nock": "^13.5.5",
+        "nock": "^14.0.10",
         "nodemon": "^3.1.7",
         "nyc": "^17.1.0",
         "oauth2-mock-server": "^7.1.2",
