--- a/registry/package.json
+++ b/registry/package.json
@@ -29,40 +29,40 @@
     "devDependencies": {
         "@istanbuljs/nyc-config-typescript": "^1.0.2",
         "@types/bcrypt": "^5.0.2",
-        "@types/chai": "^5.0.1",
-        "@types/chai-as-promised": "^8.0.1",
+        "@types/chai": "^5.2.3",
+        "@types/chai-as-promised": "^8.0.2",
         "@types/config": "^3.3.5",
         "@types/deep-equal": "^1.0.4",
         "@types/escape-html": "^1.0.4",
-        "@types/express": "^4.17.21",
-        "@types/express-serve-static-core": "^4.19.5",
-        "@types/express-session": "^1.18.0",
+        "@types/express": "^4.17.25",
+        "@types/express-serve-static-core": "^4.19.7",
+        "@types/express-session": "^1.18.2",
         "@types/is-valid-domain": "0.0.4",
-        "@types/jsonwebtoken": "^9.0.7",
-        "@types/lodash": "^4.17.9",
-        "@types/mocha": "^10.0.8",
-        "@types/newrelic": "^9.14.4",
-        "@types/node": "^20.16.7",
-        "@types/passport": "^1.0.16",
-        "@types/passport-http-bearer": "^1.0.41",
+        "@types/jsonwebtoken": "^9.0.10",
+        "@types/lodash": "^4.17.21",
+        "@types/mocha": "^10.0.10",
+        "@types/newrelic": "^9.14.8",
+        "@types/node": "^20.19.25",
+        "@types/passport": "^1.0.17",
+        "@types/passport-http-bearer": "^1.0.42",
         "@types/passport-local": "^1.0.38",
-        "@types/sinon": "^17.0.3",
-        "@types/supertest": "^6.0.2",
+        "@types/sinon": "^21.0.0",
+        "@types/supertest": "^6.0.3",
         "@types/url-join": "^4.0.3",
         "@types/uuid": "^9.0.8",
-        "chai": "4.5.0",
-        "chai-as-promised": "^7.1.2",
-        "cross-env": "7.0.3",
+        "chai": "6.2.1",
+        "chai-as-promised": "^8.0.2",
+        "cross-env": "10.1.0",
         "jsonwebtoken": "^9.0.2",
-        "mocha": "^10.7.3",
+        "mocha": "^11.7.5",
         "nock": "^14.0.10",
-        "nodemon": "^3.1.7",
+        "nodemon": "^3.1.11",
         "nyc": "^17.1.0",
-        "oauth2-mock-server": "^7.1.2",
-        "pino-pretty": "^11.2.2",
-        "rimraf": "^6.0.1",
-        "sinon": "^19.0.2",
-        "supertest": "^7.0.0",
+        "oauth2-mock-server": "^8.2.0",
+        "pino-pretty": "^13.1.2",
+        "rimraf": "^6.1.2",
+        "sinon": "^21.0.0",
+        "supertest": "^7.1.4",
         "ts-node": "^10.9.2",
         "typescript": "^5.6.2"
     },
@@ -101,7 +101,7 @@
         "uuid": "^9.0.1"
     },
     "engines": {
-        "node": "^20.8.0"
+        "node": ">=22"
     },
     "engineStrict": true
 }
