--- a/e2e/package.json
+++ b/e2e/package.json
@@ -32,9 +32,8 @@
         "wait-on": "^8.0.1"
     },
     "engines": {
-        "node": "^20.8.0"
+        "node": ">=22"
     },
-    "engineStrict": true,
     "devDependencies": {
         "@types/wait-on": "^5.3.4"
     }
