--- a/registry/tsconfig.json
+++ b/registry/tsconfig.json
@@ -64,5 +64,5 @@
     "ts-node": {
         "files": true
     },
-    "include": ["server/**/*.ts", "config/**/*.ts", "typings/**/*.ts"]
+    "include": ["server/**/*.ts", "config/**/*.ts", "typings/**/*.ts", "tests/**/*.ts"]
 }
