--- a/registry/package.json
+++ b/registry/package.json
@@ -18,7 +18,7 @@
         "seed:make": "knex --knexfile config/knexfile.ts seed:make -x ts",
         "test:sqlite": "cross-env-shell DB_CLIENT=sqlite3 npm run reset && cross-env NODE_ENV=test NODE_CONFIG_ENV=sqlite-test mocha",
         "test:mysql": "cross-env-shell NODE_ENV=test NODE_CONFIG_ENV=mysql-test DB_CLIENT=mysql \"npm run reset && mocha\" ",
-        "test": "cross-env-shell NODE_ENV=test NODE_CONFIG_ENV=postgres-test DB_CLIENT=pg \"npm run reset && nyc mocha\" ",
+        "test": "cross-env-shell NODE_ENV=test NODE_CONFIG_ENV=postgres-test DB_CLIENT=pg \"npm run reset && mocha\" ",
         "test:ci": "npm run migrate && cross-env NODE_ENV=test dotenv -- nyc mocha --forbid-only",
         "reset": "dotenv bash ./scripts/reset.sh && npm run migrate",
         "assetsdiscovery": "cross-env NODE_ENV=production INTERVAL=2000 node -r source-map-support/register ./build/server/runnerAssetsDiscovery.js",
@@ -28,14 +28,13 @@
     "license": "Apache-2.0",
     "devDependencies": {
         "@istanbuljs/nyc-config-typescript": "^1.0.2",
-        "@types/bcrypt": "^5.0.2",
+        "@types/bcrypt": "^6.0.0",
         "@types/chai": "^5.2.3",
         "@types/chai-as-promised": "^8.0.2",
         "@types/config": "^3.3.5",
         "@types/deep-equal": "^1.0.4",
         "@types/escape-html": "^1.0.4",
-        "@types/express": "^4.17.25",
-        "@types/express-serve-static-core": "^4.19.7",
+        "@types/express": "^5.0.5",
         "@types/express-session": "^1.18.2",
         "@types/is-valid-domain": "0.0.4",
         "@types/jsonwebtoken": "^9.0.10",
@@ -48,8 +47,6 @@
         "@types/passport-local": "^1.0.38",
         "@types/sinon": "^21.0.0",
         "@types/supertest": "^6.0.3",
-        "@types/url-join": "^4.0.3",
-        "@types/uuid": "^9.0.8",
         "chai": "6.2.1",
         "chai-as-promised": "^8.0.2",
         "cross-env": "10.1.0",
@@ -68,40 +65,36 @@
     },
     "dependencies": {
         "@namecheap/error-extender": "^2.2.1",
-        "@newrelic/native-metrics": "^11.0.0",
-        "axios": "^1.7.7",
-        "bcrypt": "^5.1.1",
-        "body-parser": "^1.20.3",
-        "config": "^3.3.12",
+        "axios": "^1.13.2",
+        "bcrypt": "^6.0.0",
+        "config": "^4.1.1",
         "connect-session-knex": "^5.0.0",
         "deep-equal": "^2.2.3",
-        "dotenv-cli": "^7.4.2",
+        "dotenv-cli": "^11.0.0",
         "escape-html": "^1.0.3",
-        "express": "^4.21.0",
-        "express-session": "^1.18.0",
+        "express": "^5.1.0",
+        "express-session": "^1.18.2",
         "http-shutdown": "^1.2.2",
-        "ilc-plugins-sdk": "^2.1.0",
+        "ilc-plugins-sdk": "^2.3.0",
         "is-valid-domain": "0.1.6",
-        "joi": "^17.13.3",
+        "joi": "^18.0.2",
         "knex": "^3.1.0",
         "lodash": "^4.17.21",
         "mysql": "^2.18.1",
-        "newrelic": "^12.5.1",
-        "node-html-parser": "^6.1.13",
-        "openid-client": "^5.7.0",
+        "newrelic": "^13.6.6",
+        "node-html-parser": "^7.0.1",
+        "openid-client": "^6.8.1",
         "passport": "^0.7.0",
         "passport-http-bearer": "^1.0.1",
         "passport-local": "^1.0.0",
-        "pg": "^8.13.0",
-        "query-string": "^7.1.3",
-        "serve-static": "^1.16.2",
+        "pg": "^8.16.3",
+        "serve-static": "^2.2.0",
         "source-map-support": "^0.5.21",
         "sqlite3": "^5.1.7",
-        "url-join": "^4.0.1",
-        "uuid": "^9.0.1"
+        "url-join": "^5.0.0",
+        "uuid": "^13.0.0"
     },
     "engines": {
         "node": ">=22"
-    },
-    "engineStrict": true
+    }
 }
