--- a/ilc/package.json
+++ b/ilc/package.json
@@ -32,6 +32,7 @@
         "debug": "^4.3.7",
         "deepmerge": "4.3.1",
         "eventemitter3": "^5.0.1",
+        "exponential-backoff": "^3.1.1",
         "fast-glob": "^3.3.2",
         "fastify": "^2.15.3",
         "http-status-codes": "^2.3.0",
@@ -41,7 +42,6 @@
         "js-cookie": "^2.2.1",
         "lodash": "^4.17.21",
         "lzutf8": "^0.6.3",
-        "exponential-backoff": "^3.1.1",
         "newrelic": "^12.5.1",
         "node-html-parser": "^6.1.13",
         "parseurl": "^1.3.3",
@@ -77,12 +77,12 @@
         "chai-as-promised": "^7.1.2",
         "copyfiles": "^2.4.1",
         "karma": "^6.4.4",
+        "karma-bail-fast": "^1.0.4",
         "karma-chai": "^0.1.0",
         "karma-chrome-launcher": "^3.2.0",
         "karma-coverage-istanbul-reporter": "^3.0.3",
         "karma-mocha": "^2.0.1",
         "karma-mocha-reporter": "^2.2.5",
-        "karma-parallel": "^0.3.1",
         "karma-sinon": "^1.0.5",
         "karma-sourcemap-loader": "^0.4.0",
         "karma-webpack": "^5.0.1",
