--- a/ilc/package.json
+++ b/ilc/package.json
@@ -52,54 +52,50 @@
         "systemjs": "6.10.1",
         "systemjs-css-extra": "^1.0.2",
         "url-join": "^4.0.1",
-        "uuid": "^3.4.0"
+        "uuid": "^13.0.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.25.2",
-        "@babel/plugin-proposal-class-properties": "^7.18.6",
-        "@babel/plugin-proposal-private-methods": "^7.18.6",
-        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@babel/preset-env": "^7.25.4",
-        "@babel/register": "^7.24.6",
-        "@types/chai": "^4.3.19",
+        "@babel/core": "^7.28.5",
+        "@babel/preset-env": "^7.28.5",
+        "@babel/preset-typescript": "^7.28.5",
+        "@types/chai": "^5.2.3",
         "@types/config": "^3.3.5",
-        "@types/mocha": "^10.0.8",
-        "@types/newrelic": "^9.14.4",
+        "@types/mocha": "^10.0.10",
+        "@types/newrelic": "^9.14.8",
+        "@types/node": "^22.19.2",
         "@types/safe-json-stringify": "^1.1.5",
-        "@types/sinon": "^17.0.3",
+        "@types/sinon": "^21.0.0",
         "@types/supertest": "^6.0.3",
-        "@types/uuid": "^10.0.0",
-        "babel-loader": "^9.2.1",
-        "babel-plugin-istanbul": "^6.1.1",
+        "babel-loader": "^10.0.0",
+        "babel-plugin-istanbul": "^7.0.1",
         "babel-plugin-transform-async-to-promises": "^0.8.18",
-        "chai": "^4.5.0",
-        "chai-as-promised": "^7.1.2",
+        "chai": "^6.2.1",
+        "chai-as-promised": "^8.0.2",
         "copyfiles": "^2.4.1",
+        "fork-ts-checker-webpack-plugin": "^9.1.0",
         "karma": "^6.4.4",
         "karma-bail-fast": "^1.0.4",
-        "karma-chai": "^0.1.0",
         "karma-chrome-launcher": "^3.2.0",
         "karma-coverage-istanbul-reporter": "^3.0.3",
         "karma-mocha": "^2.0.1",
         "karma-mocha-reporter": "^2.2.5",
-        "karma-sinon": "^1.0.5",
         "karma-sourcemap-loader": "^0.4.0",
         "karma-webpack": "^5.0.1",
-        "mocha": "^10.7.3",
+        "mocha": "^11.7.5",
         "nanohtml": "^1.10.0",
-        "nock": "^13.5.5",
-        "nodemon": "^3.1.7",
+        "nock": "^14.0.10",
+        "nodemon": "^3.1.11",
         "nyc": "^17.1.0",
-        "pino-pretty": "^11.2.2",
-        "rimraf": "^6.0.1",
-        "sinon": "^19.0.2",
-        "supertest": "^6.3.4",
-        "ts-loader": "^9.5.1",
+        "pino-pretty": "^13.1.3",
+        "rimraf": "^6.1.2",
+        "sinon": "^21.0.0",
+        "supertest": "^7.1.4",
         "ts-node": "^10.9.2",
-        "typescript": "^5.6.2",
-        "webpack": "^5.99.8",
-        "webpack-cli": "^5.1.4",
-        "webpack-dev-middleware": "^7.4.2"
+        "typescript": "^5.9.3",
+        "webpack": "^5.103.0",
+        "webpack-bundle-analyzer": "^5.1.0",
+        "webpack-cli": "^6.0.1",
+        "webpack-dev-middleware": "^7.4.5"
     },
     "engines": {
         "node": ">= 22"
