--- a/ilc/package.json
+++ b/ilc/package.json
@@ -22,36 +22,34 @@
     "dependencies": {
         "@namecheap/error-extender": "^2.2.1",
         "@namecheap/tailorx": "^8.2.1",
-        "@newrelic/native-metrics": "^11.0.0",
-        "agentkeepalive": "^4.5.0",
-        "axios": "^1.8.2",
+        "@newrelic/native-metrics": "^12.0.0",
+        "agentkeepalive": "^4.6.0",
+        "axios": "^1.13.2",
         "cidr-matcher": "^2.1.1",
-        "config": "^3.3.12",
-        "cookie": "^0.6.0",
-        "cross-env": "^7.0.3",
-        "debug": "^4.3.7",
+        "config": "^4.1.1",
+        "cookie": "^1.1.1",
+        "debug": "^4.4.3",
         "deepmerge": "4.3.1",
         "eventemitter3": "^5.0.1",
-        "exponential-backoff": "^3.1.1",
-        "fast-glob": "^3.3.2",
+        "exponential-backoff": "^3.1.3",
         "fastify": "^2.15.3",
         "http-status-codes": "^2.3.0",
         "ilc-plugins-sdk": "^2.3.0",
-        "ilc-sdk": "^6.1.0",
+        "ilc-sdk": "^6.1.1",
         "is-url": "^1.2.4",
-        "js-cookie": "^2.2.1",
+        "js-cookie": "^3.0.5",
         "lodash": "^4.17.21",
         "lzutf8": "^0.6.3",
-        "newrelic": "^12.5.1",
-        "node-html-parser": "^6.1.13",
+        "newrelic": "^13.8.0",
+        "node-html-parser": "^7.0.1",
         "parseurl": "^1.3.3",
         "safe-json-stringify": "^1.2.0",
-        "serve-static": "^1.16.2",
-        "single-spa": "5.6.0",
+        "serve-static": "^2.2.0",
+        "single-spa": "^5.9.5",
         "source-map-support": "^0.5.21",
-        "systemjs": "6.10.1",
-        "systemjs-css-extra": "^1.0.2",
-        "url-join": "^4.0.1",
+        "systemjs": "6.15.1",
+        "systemjs-css-extra": "1.0.2",
+        "url-join": "^5.0.0",
         "uuid": "^13.0.0"
     },
     "devDependencies": {
@@ -72,6 +70,7 @@
         "chai": "^6.2.1",
         "chai-as-promised": "^8.0.2",
         "copyfiles": "^2.4.1",
+        "cross-env": "^10.1.0",
         "fork-ts-checker-webpack-plugin": "^9.1.0",
         "karma": "^6.4.4",
         "karma-bail-fast": "^1.0.4",
