--- a/ilc/package.json
+++ b/ilc/package.json
@@ -20,6 +20,7 @@
     "author": "",
     "license": "Apache-2.0",
     "dependencies": {
+        "@fastify/express": "^1.1.0",
         "@namecheap/error-extender": "^2.2.1",
         "@namecheap/tailorx": "^8.2.1",
         "@newrelic/native-metrics": "^12.0.0",
@@ -32,7 +33,7 @@
         "deepmerge": "4.3.1",
         "eventemitter3": "^5.0.1",
         "exponential-backoff": "^3.1.3",
-        "fastify": "^2.15.3",
+        "fastify": "^3.29.5",
         "http-status-codes": "^2.3.0",
         "ilc-plugins-sdk": "^2.3.0",
         "ilc-sdk": "^6.1.1",
@@ -58,6 +59,7 @@
         "@babel/preset-typescript": "^7.28.5",
         "@types/chai": "^5.2.3",
         "@types/config": "^3.3.5",
+        "@types/express": "^5.0.6",
         "@types/mocha": "^10.0.10",
         "@types/newrelic": "^9.14.8",
         "@types/node": "^22.19.2",
