chore(ilc/server): update fastify to v5

--- a/ilc/tsconfig.json
+++ b/ilc/tsconfig.json
@@ -8,6 +8,9 @@
         "sourceMap": true,
         "esModuleInterop": true
     },
+    "ts-node": {
+        "files": true
+    },
     "exclude": ["node_modules", "public", "dist"],
     "include": ["**/*.ts", "**/*.js"]
 }
