--- a/ilc/package.json
+++ b/ilc/package.json
@@ -20,7 +20,8 @@
     "author": "",
     "license": "Apache-2.0",
     "dependencies": {
-        "@fastify/express": "^1.1.0",
+        "@fastify/express": "^4.0.2",
+        "@fastify/request-context": "^6.2.1",
         "@namecheap/error-extender": "^2.2.1",
         "@namecheap/tailorx": "^8.2.1",
         "@newrelic/native-metrics": "^12.0.0",
@@ -33,7 +34,7 @@
         "deepmerge": "4.3.1",
         "eventemitter3": "^5.0.1",
         "exponential-backoff": "^3.1.3",
-        "fastify": "^3.29.5",
+        "fastify": "^5.6.2",
         "http-status-codes": "^2.3.0",
         "ilc-plugins-sdk": "^2.3.0",
         "ilc-sdk": "^6.1.1",
@@ -63,6 +64,7 @@
         "@types/mocha": "^10.0.10",
         "@types/newrelic": "^9.14.8",
         "@types/node": "^22.19.2",
+        "@types/parseurl": "^1.3.3",
         "@types/safe-json-stringify": "^1.1.5",
         "@types/sinon": "^21.0.0",
         "@types/supertest": "^6.0.3",
