--- a/ilc/package.json
+++ b/ilc/package.json
@@ -20,8 +20,8 @@
     "author": "",
     "license": "Apache-2.0",
     "dependencies": {
-        "@fastify/express": "^4.0.2",
         "@fastify/request-context": "^6.2.1",
+        "@fastify/static": "^8.1.1",
         "@namecheap/error-extender": "^2.2.1",
         "@namecheap/tailorx": "^8.2.1",
         "@newrelic/native-metrics": "^12.0.0",
@@ -46,7 +46,6 @@
         "node-html-parser": "^7.0.1",
         "parseurl": "^1.3.3",
         "safe-json-stringify": "^1.2.0",
-        "serve-static": "^2.2.0",
         "single-spa": "5.6.0",
         "source-map-support": "^0.5.21",
         "systemjs": "6.15.1",
@@ -60,7 +59,6 @@
         "@babel/preset-typescript": "^7.28.5",
         "@types/chai": "^5.2.3",
         "@types/config": "^3.3.5",
-        "@types/express": "^5.0.6",
         "@types/mocha": "^10.0.10",
         "@types/newrelic": "^9.14.8",
         "@types/node": "^22.19.2",
